Zaktualizowano notatnik projektu 2, poprawiając komentarze oraz ścieżki do plików.

--- a/Student/P3/Projekt_3_full_housing_boston.ipynb
+++ b/Student/P3/Projekt_3_full_housing_boston.ipynb
@@ -5,7 +5,10 @@
    "metadata": {},
    "source": [
     "### Wprowadzenie - regresja liniowa\n",
-    "Oryginalny kod: https://scikit-learn.org/stable/auto_examples/linear_model/plot_ols.html"
+    "\n",
+    "Czym jest zadanie regresji? Jak opisać jakość modelu regresji?\n",
+    "\n",
+    "*Oryginalny kod: https://scikit-learn.org/stable/auto_examples/linear_model/plot_ols.html*"
    ]
   },
   {
@@ -44,9 +47,9 @@
     "    print(f\"RMSE: {mean_squared_error(y_test, y_pred)**.5:.2f}\")\n",
     "\n",
     "    # Plot outputs\n",
-    "    axes[i].scatter(x_test, y_test, color=\"black\")    \n",
-    "    axes[i].plot([np.min(x_test),np.max(x_test)], [np.min(x_test)*coef,np.max(x_test)*coef], color=\"blue\", linewidth=1, alpha=1.0)\n",
-    "    axes[i].plot(x_test, y_pred, color=\"red\", linewidth=3, alpha=0.55)\n",
+    "    axes[i].scatter(x_test, y_test, color=\"black\", label=\"Test data\", alpha=0.50)    \n",
+    "    axes[i].plot([np.min(x_test),np.max(x_test)], [np.min(x_test)*coef,np.max(x_test)*coef], color=\"blue\", linewidth=1, alpha=1.0, label=\"Perfect fit\")\n",
+    "    axes[i].plot(x_test, y_pred, color=\"red\", linewidth=2, alpha=0.50, label=\"Our model\")\n",
     "\n",
     "    axes[i].set_xticks(())\n",
     "    axes[i].set_yticks(())\n",
@@ -59,9 +62,23 @@
     "    axes[i].set_ylim(-150, 150)\n",
     "\n",
     "    axes[i].set_title(f\"Noise={int(noise)}, R^2={r2_score(y_test, y_pred):.2f}, RMSE={mean_squared_error(y_test, y_pred)**.5:.1f}\")\n",
+    "    axes[i].legend(loc=\"upper left\", fontsize=8)\n",
     "\n",
     "plt.tight_layout()\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Często stosowane miary jakości:\n",
+    "\n",
+    "**MAE** - Mean Absolute Error\n",
+    "\n",
+    "**RMSE** - Root Mean Square Error\n",
+    "\n",
+    "**R^2** - Współczynnik determinacji"
    ]
   },
   {
@@ -73,7 +90,7 @@
     "import pandas as pd\n",
     "import numpy as np\n",
     "\n",
-    "DATASET_PATH = \"Dane\\\\BostonHousing.csv\" # Ścieżka do pliku z danymi"
+    "DATASET_PATH = \"BostonHousing.csv\" # Ścieżka do pliku z danymi"
    ]
   },
   {
@@ -82,7 +99,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Wczytanie datasetu California Housing\n",
+    "# Wczytanie datasetu Boston Housing\n",
     "dataset = pd.read_csv(DATASET_PATH)"
    ]
   },
@@ -120,20 +137,20 @@
     "    \"medv\": \"Median value of owner-occupied homes in $1000's\",\n",
     "}\n",
     "DATASET_FEATURE_LABELS = {\n",
-    "    \"crim\": \"crime\",\n",
-    "    \"zn\": \"zoned prop.\",\n",
-    "    \"indus\": \"industry prop.\",\n",
+    "    \"crim\": \"Crime\",\n",
+    "    \"zn\": \"Zoned Prop.\",\n",
+    "    \"indus\": \"Industry Prop.\",\n",
     "    \"chas\": \"Charles River\",\n",
     "    \"nox\": \"NOX\",\n",
     "    \"rm\": \"No. rooms\",\n",
-    "    \"age\": \"pre-1940\",\n",
-    "    \"dis\": \"weighted dist.\",\n",
-    "    \"rad\": \"radial highways\",\n",
-    "    \"tax\": \"property tax\",\n",
-    "    \"ptratio\": \"pupil-teacher ratio\",\n",
-    "    \"b\": \"proportion of blacks\",\n",
-    "    \"lstat\": \"lower status\",\n",
-    "    \"medv\": \"median value\",\n",
+    "    \"age\": \"Pre-1940\",\n",
+    "    \"dis\": \"Weighted Dist.\",\n",
+    "    \"rad\": \"Radial Highways\",\n",
+    "    \"tax\": \"Property Tax\",\n",
+    "    \"ptratio\": \"Pupil-Teacher Ratio\",\n",
+    "    \"b\": \"Proportion of Blacks\",\n",
+    "    \"lstat\": \"Lower Status\",\n",
+    "    \"medv\": \"Median Value\",\n",
     "}"
    ]
   },
@@ -231,7 +248,7 @@
    "outputs": [],
    "source": [
     "# Wydzielenie zmiennej zależnej (Y)\n",
-    "x,y = dataset.drop(columns=[\"median value\"]), dataset[\"median value\"]"
+    "x,y = dataset.drop(columns=[\"Median Value\"]), dataset[\"Median Value\"]"
    ]
   },
   {
@@ -267,7 +284,16 @@
    "outputs": [],
    "source": [
     "# Histogramy zmiennych niezależnych\n",
-    "x.hist(figsize=(15,10), bins=20, edgecolor='black', grid=False)"
+    "x.hist(figsize=(15,10), bins=20, edgecolor='black', grid=True)\n",
+    "# Wykres w pandas działa jak zwykły matplotlib i możemy go zmodyfikować\n",
+    "\n",
+    "# Dodanie siatki (grid) do wszystkich wykresów\n",
+    "for ax in plt.gcf().axes:\n",
+    "    ax.grid(True, which='both', linestyle='--', linewidth=0.5, alpha=0.75)\n",
+    "# Dodanie tytułu\n",
+    "plt.suptitle(\"Histograms\", fontsize=16)\n",
+    "# Zmiana ułożenia na \"ciasne\" (tight)\n",
+    "plt.tight_layout()"
    ]
   },
   {
@@ -279,6 +305,7 @@
     "# Histogram zmiennej zależnej\n",
     "fig,axes = plt.subplots(figsize=(5,3))\n",
     "axes.hist(y*1000, bins=20, edgecolor='black')\n",
+    "axes.grid(True, which='both', linestyle='--', linewidth=0.5, alpha=0.75)\n",
     "axes.set_xlabel('Median value of owner-occupied homes in $')\n",
     "axes.set_ylabel('Frequency')\n",
     "axes.set_title('Histogram of Median Value')\n",
@@ -331,10 +358,10 @@
     ")\n",
     "\n",
     "plt.clf()\n",
-    "sns.boxplot(y=x[\"weighted dist.\"], x=(x[\"industry prop.\"]/5).round()*5) # do pełnych 5\n",
+    "sns.boxplot(y=x[\"Weighted Dist.\"], x=(x[\"Industry Prop.\"]/5).round()*5) # do pełnych 5\n",
     "plt.show()\n",
     "plt.clf()\n",
-    "sns.boxplot(y=x[\"industry prop.\"], x=x[\"weighted dist.\"].round()) \n",
+    "sns.boxplot(y=x[\"Industry Prop.\"], x=x[\"Weighted Dist.\"].round()) \n",
     "plt.show()\n",
     "\n",
     "print(\n",
@@ -356,7 +383,9 @@
     "\n",
     "fig, ax = plt.subplots(figsize=(10, 8))\n",
     "\n",
-    "sns.heatmap(x.select_dtypes(exclude='object').corr(), ax=ax, annot=True, fmt=\".2f\", cmap=\"coolwarm\", center=0)"
+    "sns.heatmap(x.select_dtypes(exclude='object').corr(), ax=ax, annot=True, fmt=\".2f\", cmap=\"coolwarm\", center=0)\n",
+    "plt.suptitle(\"Correlation Heatmap\", fontsize=16)\n",
+    "plt.tight_layout()"
    ]
   },
   {
@@ -490,10 +519,10 @@
     "\n",
     "fig, ax = plt.subplots(1,1,figsize=(5,5))\n",
     "\n",
-    "ax.plot(y_train, y_pred, '.')\n",
-    "ax.plot([0, np.max(y_val)], [0, np.max(y_val)], color='red', linestyle='--', linewidth=1)\n",
-    "ax.set_xlabel(\"Oczekiwane wartości\")\n",
-    "ax.set_ylabel(\"Predykcje\")\n",
+    "ax.scatter(y_train, y_pred, marker='.', alpha=0.5)\n",
+    "ax.plot([0, np.max(y_train)], [0, np.max(y_train)], color='red', linestyle='--', linewidth=2, alpha=0.75, label=\"Perfect fit\")\n",
+    "ax.set_xlabel(\"Oczekiwane wartości (etykiety)\")\n",
+    "ax.set_ylabel(\"Predykcje (wyjście modelu)\")\n",
     "ax.set_title(\"Zestaw treningowy\")\n",
     "ax.grid(True)\n",
     "plt.show()\n"
@@ -524,10 +553,10 @@
     "\n",
     "fig, ax = plt.subplots(1,1,figsize=(5,5))\n",
     "\n",
-    "ax.plot(y_train, y_pred, '.')\n",
-    "ax.plot([0, np.max(y_val)], [0, np.max(y_val)], color='red', linestyle='--', linewidth=1)\n",
-    "ax.set_xlabel(\"Oczekiwane wartości\")\n",
-    "ax.set_ylabel(\"Predykcje\")\n",
+    "ax.scatter(y_train, y_pred, marker='.', alpha=0.5)\n",
+    "ax.plot([0, np.max(y_train)], [0, np.max(y_train)], color='red', linestyle='--', linewidth=2, alpha=0.75, label=\"Perfect fit\")\n",
+    "ax.set_xlabel(\"Oczekiwane wartości (etykiety)\")\n",
+    "ax.set_ylabel(\"Predykcje (wyjście modelu)\")\n",
     "ax.set_title(\"Zestaw treningowy\")\n",
     "ax.grid(True)\n",
     "plt.show()"
@@ -567,11 +596,11 @@
     "\n",
     "fig, ax = plt.subplots(1,1,figsize=(5,5))\n",
     "\n",
-    "ax.plot(y_val, y_pred, '.')\n",
-    "ax.plot([0, np.max(y_val)], [0, np.max(y_val)], color='red', linestyle='--', linewidth=1)\n",
-    "ax.set_xlabel(\"Oczekiwane wartości\")\n",
-    "ax.set_ylabel(\"Predykcje\")\n",
-    "ax.set_title(\"Zestaw walidacyjny\")\n",
+    "ax.scatter(y_val, y_pred, marker='.', alpha=0.5)\n",
+    "ax.plot([0, np.max(y_val)], [0, np.max(y_val)], color='red', linestyle='--', linewidth=2, alpha=0.75, label=\"Perfect fit\")\n",
+    "ax.set_xlabel(\"Oczekiwane wartości (etykiety)\")\n",
+    "ax.set_ylabel(\"Predykcje (wyjście modelu)\")\n",
+    "ax.set_title(\"Zestaw treningowy\")\n",
     "ax.grid(True)\n",
     "plt.show()"
    ]
@@ -592,11 +621,11 @@
     "\n",
     "fig, ax = plt.subplots(1,1,figsize=(5,5))\n",
     "\n",
-    "ax.plot(y_val, y_pred, '.')\n",
-    "ax.plot([0, np.max(y_val)], [0, np.max(y_val)], color='red', linestyle='--', linewidth=1)\n",
-    "ax.set_xlabel(\"Oczekiwane wartości\")\n",
-    "ax.set_ylabel(\"Predykcje\")\n",
-    "ax.set_title(\"Zestaw walidacyjny\")\n",
+    "ax.scatter(y_val, y_pred, marker='.', alpha=0.5)\n",
+    "ax.plot([0, np.max(y_val)], [0, np.max(y_val)], color='red', linestyle='--', linewidth=2, alpha=0.75, label=\"Perfect fit\")\n",
+    "ax.set_xlabel(\"Oczekiwane wartości (etykiety)\")\n",
+    "ax.set_ylabel(\"Predykcje (wyjście modelu)\")\n",
+    "ax.set_title(\"Zestaw treningowy\")\n",
     "ax.grid(True)\n",
     "plt.show()"
    ]
@@ -678,11 +707,11 @@
     "\n",
     "fig, ax = plt.subplots(1,1,figsize=(5,5))\n",
     "\n",
-    "ax.plot(y_val, y_pred, '.')\n",
-    "ax.plot([0, np.max(y_val)], [0, np.max(y_val)], color='red', linestyle='--', linewidth=1)\n",
-    "ax.set_xlabel(\"Oczekiwane wartości\")\n",
-    "ax.set_ylabel(\"Predykcje\")\n",
-    "ax.set_title(\"Zestaw walidacyjny\")\n",
+    "ax.scatter(y_val, y_pred, marker='.', alpha=0.5)\n",
+    "ax.plot([0, np.max(y_val)], [0, np.max(y_val)], color='red', linestyle='--', linewidth=2, alpha=0.75, label=\"Perfect fit\")\n",
+    "ax.set_xlabel(\"Oczekiwane wartości (etykiety)\")\n",
+    "ax.set_ylabel(\"Predykcje (wyjście modelu)\")\n",
+    "ax.set_title(\"Zestaw treningowy\")\n",
     "ax.grid(True)\n",
     "plt.show()"
    ]
@@ -843,11 +872,11 @@
     "\n",
     "fig, ax = plt.subplots(1,1,figsize=(5,5))\n",
     "\n",
-    "ax.plot(y_val, y_pred, '.')\n",
-    "ax.plot([0, np.max(y_val)], [0, np.max(y_val)], color='red', linestyle='--', linewidth=1)\n",
-    "ax.set_xlabel(\"Oczekiwane wartości\")\n",
-    "ax.set_ylabel(\"Predykcje\")\n",
-    "ax.set_title(\"Zestaw walidacyjny\")\n",
+    "ax.scatter(y_val, y_pred, marker='.', alpha=0.5)\n",
+    "ax.plot([0, np.max(y_val)], [0, np.max(y_val)], color='red', linestyle='--', linewidth=2, alpha=0.75, label=\"Perfect fit\")\n",
+    "ax.set_xlabel(\"Oczekiwane wartości (etykiety)\")\n",
+    "ax.set_ylabel(\"Predykcje (wyjście modelu)\")\n",
+    "ax.set_title(\"Zestaw treningowy\")\n",
     "ax.grid(True)\n",
     "plt.show()"
    ]
@@ -882,11 +911,11 @@
     "\n",
     "fig, ax = plt.subplots(1,1,figsize=(5,5))\n",
     "\n",
-    "ax.plot(y_test, y_pred, '.')\n",
-    "ax.plot([0, np.max(y_val)], [0, np.max(y_val)], color='red', linestyle='--', linewidth=1)\n",
-    "ax.set_xlabel(\"Oczekiwane wartości\")\n",
-    "ax.set_ylabel(\"Predykcje\")\n",
-    "ax.set_title(\"Zestaw testowy\") \n",
+    "ax.scatter(y_test, y_pred, marker='.', alpha=0.5)\n",
+    "ax.plot([0, np.max(y_test)], [0, np.max(y_test)], color='red', linestyle='--', linewidth=2, alpha=0.75, label=\"Perfect fit\")\n",
+    "ax.set_xlabel(\"Oczekiwane wartości (etykiety)\")\n",
+    "ax.set_ylabel(\"Predykcje (wyjście modelu)\")\n",
+    "ax.set_title(\"Zestaw treningowy\")\n",
     "ax.grid(True)\n",
     "plt.show()"
    ]
@@ -896,6 +925,13 @@
    "metadata": {},
    "source": [
     "Jak zmiana *SEED'a* pdoczas podziału na zestawy train/test/val wpływa na wyniki modelu?"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Czy taki prosty podział na *train/test/val* pozwala na wykonanie miarodajnej ewaluacji modelu?"
    ]
   }
  ],
