Zaktualizowano ścieżkę do pliku danych oraz dodano dodatkowe formatowanie histogramów w notatniku projektu 4.

--- a/Student/P4/Projekt_4_full_titanic.ipynb
+++ b/Student/P4/Projekt_4_full_titanic.ipynb
@@ -69,7 +69,7 @@
     "from sklearn.preprocessing import StandardScaler, MinMaxScaler\n",
     "import numpy as np\n",
     "\n",
-    "DATASET_PATH = \"Dane\\\\Titanic.csv\""
+    "DATASET_PATH = \"Titanic.csv\""
    ]
   },
   {
@@ -232,7 +232,10 @@
    "outputs": [],
    "source": [
     "# Histogramy zmiennych niezależnych\n",
-    "x.hist(figsize=(10,8), bins=20, edgecolor='black', grid=False)"
+    "axes = x.hist(figsize=(10,8), bins=20, edgecolor='black', grid=False)\n",
+    "# Dodatkowe formatowanie\n",
+    "axes = axes.flatten()\n",
+    "axes[0].set_xticks([1,2,3])"
    ]
   },
   {
