Zaktualizowano parametry modelu oraz poprawiono formatowanie kodu w notatniku projektu 5. Zmieniono rozmiar batcha, dodano warstwę bottleneck w modelu CNN oraz poprawiono wyświetlanie wykresów strat i dokładności.

--- a/Student/P5/Projekt_5_FashionMNIST.ipynb
+++ b/Student/P5/Projekt_5_FashionMNIST.ipynb
@@ -32,7 +32,7 @@
     "test_dataset = FashionMNIST(root='./data', train=False, download=True, transform=transform)\n",
     "\n",
     "# Data loader\n",
-    "batch_size = 32\n",
+    "batch_size = 128\n",
     "\n",
     "train_dataloader = DataLoader(train_dataset, batch_size=batch_size, shuffle=True)\n",
     "test_dataloader = DataLoader(test_dataset, batch_size=batch_size, shuffle=False)"
@@ -106,18 +106,23 @@
     "        self.conv1 = nn.Conv2d(in_channels=1, out_channels=8, kernel_size=3)        \n",
     "        self.conv2 = nn.Conv2d(in_channels=8, out_channels=16, kernel_size=3)\n",
     "        # Pooling layer\n",
-    "        self.pool = nn.AvgPool2d(2, 2)\n",
+    "        self.pool = nn.AvgPool2d(kernel_size=2, stride=2)\n",
+    "        # ReLU\n",
+    "        self.relu = nn.ReLU()\n",
+    "        # Bottleneck pool\n",
+    "        self.bottleneck = nn.Conv2d(in_channels=16, out_channels=32, kernel_size=5)\n",
     "        # Fully connected layers\n",
-    "        self.fc1 = nn.Linear(16*5*5, 128)\n",
+    "        self.fc1 = nn.Linear(32, 128)\n",
     "        self.fc2 = nn.Linear(128, 64)\n",
     "        self.fc3 = nn.Linear(64, 10)\n",
     "\n",
     "    def forward(self, x):\n",
-    "        x = self.pool(F.relu(self.conv1(x)))\n",
-    "        x = self.pool(F.relu(self.conv2(x)))\n",
-    "        x = torch.flatten(x, 1)\n",
-    "        x = F.relu(self.fc1(x))\n",
-    "        x = F.relu(self.fc2(x))\n",
+    "        x = self.pool(self.relu(self.conv1(x))) # Conv block 1\n",
+    "        x = self.pool(self.relu(self.conv2(x))) # Conv block 2\n",
+    "        x = self.relu(self.bottleneck(x)) # Conv block 3 - bottleneck\n",
+    "        x = torch.flatten(x, 1) # Flatten from B C H W to B C\n",
+    "        x = self.relu(self.fc1(x)) # Linear layer 1\n",
+    "        x = self.relu(self.fc2(x)) # Linear layer 2\n",
     "        x = self.fc3(x)\n",
     "        return x\n",
     "    \n",
@@ -218,6 +223,12 @@
     "    axes[1].set_xlabel(\"Epoch\")\n",
     "    axes[1].set_ylabel(\"Accuracy\")\n",
     "\n",
+    "    axes[0].set_xticks(np.arange(0, len(train_loss), 1))\n",
+    "    axes[0].set_xticklabels(np.arange(1, len(train_loss) + 1, 1))\n",
+    "    \n",
+    "    axes[1].set_xticks(np.arange(0, len(val_accuracy), 1))\n",
+    "    axes[1].set_xticklabels(np.arange(1, len(val_accuracy) + 1, 1))\n",
+    "\n",
     "    fig.tight_layout()\n",
     "    fig.show()\n",
     "    \n",
@@ -233,9 +244,15 @@
     "from torch import optim\n",
     "from tqdm import tqdm\n",
     "\n",
-    "def train(model, save_name, epochs=5):\n",
+    "def train(model, save_name, epochs=5, learning_rate=1e-3):\n",
+    "    device = torch.device(\"cuda\" if torch.cuda.is_available() else \"cpu\")\n",
+    "    device_name = torch.cuda.get_device_name(0) if torch.cuda.is_available() else \"CPU\"\n",
+    "    print(f\"Device: {device_name}\")\n",
+    "\n",
+    "    model.to(device)\n",
+    "\n",
     "    criterion = nn.CrossEntropyLoss()\n",
-    "    optimizer = optim.Adam(model.parameters())\n",
+    "    optimizer = optim.Adam(model.parameters(), lr=learning_rate)\n",
     "\n",
     "    train_loss = []\n",
     "    val_loss = []\n",
@@ -246,7 +263,10 @@
     "        model.train()\n",
     "        losses = []\n",
     "        \n",
-    "        for i, (inputs, labels) in tqdm(enumerate(train_dataloader, 0),desc=f\"[{epoch + 1}/{epochs}] Training\"):\n",
+    "        tqdm_train = tqdm(enumerate(train_dataloader, 0),desc=f\"[{epoch + 1}/{epochs}] Training\", total=len(train_dataloader))\n",
+    "        for i, (inputs, labels) in tqdm_train:\n",
+    "            # move inputs and labels to the device\n",
+    "            inputs, labels = inputs.to(device), labels.to(device)\n",
     "\n",
     "            # zero the parameter gradients\n",
     "            optimizer.zero_grad()\n",
@@ -259,24 +279,32 @@
     "\n",
     "            losses.append(loss.item())\n",
     "\n",
+    "            tqdm_train.set_description(f\"[{epoch + 1}/{epochs}] Training | Avg. Loss: {np.mean(losses):.4f}\")\n",
+    "\n",
     "        train_loss.append(np.mean(losses))\n",
     "\n",
     "        # validation loss\n",
     "        model.eval()\n",
     "        losses = []\n",
     "        correct_preds = 0\n",
-    "        \n",
-    "        for i, (inputs, labels) in tqdm(enumerate(test_dataloader),desc=f\"[{epoch + 1}/{epochs}] Validation\"):\n",
+    "\n",
+    "        tqdm_test = tqdm(enumerate(test_dataloader),desc=f\"[{epoch + 1}/{epochs}] Validation\", total=len(test_dataloader))\n",
+    "        for i, (inputs, labels) in tqdm_test:\n",
+    "            # move inputs and labels to the device\n",
+    "            inputs, labels = inputs.to(device), labels.to(device)\n",
+    "            \n",
     "            outputs = model(inputs)\n",
     "            loss = criterion(outputs, labels)\n",
     "            losses.append(loss.item())\n",
-    "            correct_preds += (outputs.argmax(dim=1) == labels).float().mean().item()\n",
+    "            correct_preds += (F.softmax(outputs, dim=1).argmax(dim=1) == labels).float().mean().item()\n",
+    "\n",
+    "            tqdm_test.set_description(f\"[{epoch + 1}/{epochs}] Validation | Avg. Loss: {np.mean(losses):.4f}\")\n",
     "\n",
     "        val_accuracy.append(correct_preds/len(test_dataloader))\n",
     "        val_loss.append(np.mean(losses))\n",
     "        \n",
     "        # print loss\n",
-    "        print(f'\\ttrain loss: {train_loss[-1]:.4f} | val loss: {val_loss[-1]:.4f}| val acc.: {val_accuracy[-1]*100.0:.2f}\\n')\n",
+    "        print(f'\\ttrain loss: {train_loss[-1]:.4f} | val loss: {val_loss[-1]:.4f} | val acc.: {val_accuracy[-1]*100.0:.2f}\\n')\n",
     "\n",
     "    torch.save(model.state_dict(), save_name)\n",
     "\n",
@@ -289,7 +317,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "train_loss, val_loss, val_accuracy = train(model_custom, 'model_custom.pth', epochs=10)"
+    "train_loss, val_loss, val_accuracy = train(model_custom, 'model_custom.pth', epochs=10, learning_rate=1e-3)"
    ]
   },
   {
@@ -307,7 +335,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "train_loss, val_loss, val_accuracy = train(model_resnet, 'model_resnet.pth', epochs=10)"
+    "train_loss, val_loss, val_accuracy = train(model_resnet, 'model_resnet.pth', epochs=10, learning_rate=1e-3)"
    ]
   },
   {
@@ -334,7 +362,7 @@
    "source": [
     "\"Jeszcze jedna epoka ...\" - zagadnienie przetrenowania modeli\n",
     "\n",
-    "<img src=\"model_overfitting.png\" alt=\"overfitting\" width=\"75%\"/>"
+    "<img src=\"https://raw.githubusercontent.com/Kacper-Marciniak/Kurs-AI/main/Student/P5/model_overfitting.png\" alt=\"overfitting\" width=\"75%\"/>"
    ]
   },
   {
@@ -373,8 +401,8 @@
     "\n",
     "    model.eval()\n",
     "    with torch.no_grad():\n",
-    "        for images, labels in test_dataloader:\n",
-    "            correct_preds += (model(images).argmax(dim=1) == labels).float().mean().item()\n",
+    "        for images, labels in test_dataloader:            \n",
+    "            correct_preds += (F.softmax(model(images), dim=1).argmax(dim=1) == labels).float().mean().item()\n",
     "\n",
     "    accuracy = correct_preds * 100 / len(test_dataloader)\n",
     "\n",
@@ -416,8 +444,8 @@
     "    model.eval()\n",
     "    with torch.no_grad():\n",
     "        for images, labels in test_dataloader:\n",
-    "\n",
-    "            predicted = torch.max(model(images).data, 1)[1]\n",
+    "            \n",
+    "            predicted = torch.max(F.softmax(model(images), dim=1).data, 1)[1]\n",
     "\n",
     "            for p,l in zip(predicted, labels):\n",
     "                p,l = p.item(), l.item()\n",
@@ -455,6 +483,8 @@
     "ax[0].set_title(\"Custom CNN\")\n",
     "ax[0].set_xticks(list(LABELS.keys()))\n",
     "ax[0].set_yticks(list(LABELS.keys()))\n",
+    "ax[0].set_xticklabels(list(LABELS.values()), rotation=45, ha=\"right\", fontsize=7)\n",
+    "ax[0].set_yticklabels(list(LABELS.values()), fontsize=7)\n",
     "\n",
     "ax[0].set_ylabel(\"Predicted\")\n",
     "ax[0].set_xlabel(\"Ground Truth\")\n",
@@ -468,6 +498,8 @@
     "ax[1].set_title(\"ResNet18\")\n",
     "ax[1].set_xticks(list(LABELS.keys()))\n",
     "ax[1].set_yticks(list(LABELS.keys()))\n",
+    "ax[1].set_xticklabels(list(LABELS.values()), rotation=45, ha=\"right\", fontsize=7)\n",
+    "ax[1].set_yticklabels(list(LABELS.values()), fontsize=7)\n",
     "\n",
     "ax[1].set_ylabel(\"Predicted\")\n",
     "ax[1].set_xlabel(\"Ground Truth\")\n",
@@ -476,6 +508,7 @@
     "    for j in range(10):\n",
     "        ax[1].text(j, i, matrix_resnet[i, j], ha=\"center\", va=\"center\", color=\"black\", fontsize=8)\n",
     "\n",
+    "plt.tight_layout()\n",
     "plt.show()"
    ]
   },
@@ -509,10 +542,10 @@
     "        global_res[\"f1\"][i] = f1\n",
     "\n",
     "        print(f'\\taccuracy: {accuracy*100.0:.2f}, precision: {precision*100.0:.2f}, recall: {recall*100.0:.2f}, F1: {f1*100.0:.2f}')\n",
-    "    \n",
-    "    print(f'-------------\\nGlobal (macro) results:')\n",
-    "    print(f'\\taccuracy: {np.mean(global_res[\"accuracy\"])*100.0:.2f}, precision: {np.mean(global_res[\"precision\"])*100.0:.2f}, recall: {np.mean(global_res[\"recall\"])*100.0:.2f}, F1: {np.mean(global_res[\"f1\"])*100.0:.2f}')\n",
-    "    \n",
+    "\n",
+    "    print(f'{\"-\"*70}\\nGlobal (macro) results:')\n",
+    "    print(f'\\tAccuracy: {np.mean(global_res[\"accuracy\"])*100.0:.2f}, Precision: {np.mean(global_res[\"precision\"])*100.0:.2f}, Recall: {np.mean(global_res[\"recall\"])*100.0:.2f}, F1: {np.mean(global_res[\"f1\"])*100.0:.2f}')\n",
+    "\n",
     "\n"
    ]
   },
@@ -522,6 +555,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "print(\"Custom model:\\n\")\n",
     "analyze_matrix(matrix_custom)"
    ]
   },
@@ -531,13 +565,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "print(\"ResNet18:\\n\")\n",
     "analyze_matrix(matrix_resnet)"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "env_main",
    "language": "python",
    "name": "python3"
   },
@@ -551,7 +586,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.7"
+   "version": "3.13.5"
   }
  },
  "nbformat": 4,
