Zmieniono klasę z datasetu MVTec-AD na "tile", zaktualizowano inicjalizację modelu PADIM oraz poprawiono formatowanie kodu. Usunięto zbędne wydruki i poprawiono sposób ładowania danych.

--- a/Student/P7/Projekt_7_MVTEC.ipynb
+++ b/Student/P7/Projekt_7_MVTEC.ipynb
@@ -28,7 +28,7 @@
    "outputs": [],
    "source": [
     "# Wybór klasy z datasetu MVTec-AD\n",
-    "CLASS = \"bottle\""
+    "CLASS = \"tile\""
    ]
   },
   {
@@ -120,7 +120,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Utworzenie instancji modelu PADIM"
+    "### Utworzenie instancji modelu PADIM\n",
+    "\n",
+    "[PaDiM: a Patch Distribution Modeling Framework\n",
+    "for Anomaly Detection and Localization](https://arxiv.org/abs/2011.08785)"
    ]
   },
   {
@@ -132,9 +135,7 @@
     "from padim import Padim\n",
     "import numpy as np\n",
     "\n",
-    "ARCHITECTURE = 'wide_resnet50_2' #'resnet18'\n",
-    "\n",
-    "padim = Padim(arch=ARCHITECTURE, save_path='results', classname=CLASS)"
+    "padim = Padim(save_path='results', classname=CLASS)"
    ]
   },
   {
@@ -156,13 +157,13 @@
     "    embedding_vectors_test = embedding_vectors_test.cpu().numpy()\n",
     "\n",
     "    np.savez_compressed(f'results/embedding_{test_dataset.class_name}.npz', embedding_vectors=embedding_vectors_test, anomaly_types=anomaly_types_test)\n",
-    "else:\n",
-    "    data = np.load(f'results/embedding_{test_dataset.class_name}.npz')\n",
-    "    embedding_vectors_test = data[\"embedding_vectors\"]\n",
-    "    anomaly_types_test = data[\"anomaly_types\"]\n",
     "\n",
-    "    del data\n",
+    "    del embedding_vectors_test, anomaly_types_test\n",
     "\n",
+    "data = np.load(f'results/embedding_{test_dataset.class_name}.npz')\n",
+    "embedding_vectors_test = data[\"embedding_vectors\"]\n",
+    "anomaly_types_test = data[\"anomaly_types\"]\n",
+    "del data\n",
     "\n",
     "print(embedding_vectors_test.shape)\n",
     "embedding_vectors_test = np.max(embedding_vectors_test, axis=(2,3))\n",
@@ -260,7 +261,8 @@
     "from time import time\n",
     "import random\n",
     "\n",
-    "image_sample = random.sample(glob.glob(f'{DATASET_PATH}\\\\{CLASS}\\\\test\\\\*\\\\*.png'), k=5)\n",
+    "path = os.path.abspath(f'{DATASET_PATH}/{CLASS}/test/*/*.png')\n",
+    "image_sample = random.sample(glob.glob(path), k=5)\n",
     "\n",
     "for im_path in image_sample:\n",
     "    print(im_path)\n",
@@ -268,7 +270,7 @@
     "    image = cv.imread(im_path)\n",
     "    #image = modify_image(image)\n",
     "    \n",
-    "    class_type = im_path.split(\"\\\\\")[-2]\n",
+    "    class_type = os.path.basename(os.path.split(im_path)[-2])\n",
     "    processing_time = time()\n",
     "    mask, heatmap = padim.preview(image)\n",
     "    processing_time = time() - processing_time\n",
@@ -301,7 +303,7 @@
     "    axes[2].imshow(mask_gt, cmap='gray')\n",
     "    axes[2].axis(\"off\")\n",
     "\n",
-    "    fig.suptitle(f\"{class_type.capitalize()} - {os.path.basename(im_path)}. Processing time: {processing_time:.1f} s\")\n",
+    "    fig.suptitle(f\"{class_type.capitalize()} - {os.path.basename(im_path)}. Processing time: {processing_time:.3f} s\")\n",
     "\n",
     "    fig.tight_layout()\n",
     "    plt.show()"
@@ -330,7 +332,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "image = glob.glob(f'{DATASET_PATH}\\\\{CLASS}\\\\test\\\\*\\\\*.png')[0]\n",
+    "path = os.path.abspath(f'{DATASET_PATH}/{CLASS}/test/*/*.png')\n",
+    "image = glob.glob(path)[0]\n",
     "\n",
     "image = cv.imread(image)\n",
     "image = cv.cvtColor(image, cv.COLOR_BGR2RGB)\n",
@@ -355,8 +358,8 @@
     "import glob\n",
     "import cv2 as cv\n",
     "import os\n",
-    "import sys\n",
-    "from sklearn.metrics import recall_score, precision_score, f1_score\n",
+    "import tqdm\n",
+    "from sklearn.metrics import recall_score, precision_score\n",
     "\n",
     "\n",
     "def get_predictions(modify: bool = False):\n",
@@ -364,11 +367,12 @@
     "    predictions = []\n",
     "    labels = []\n",
     "\n",
-    "    for im_path in glob.glob(f'{DATASET_PATH}\\\\{CLASS}\\\\test\\\\*\\\\*.png'):\n",
-    "        print(im_path)\n",
+    "    path = os.path.abspath(f'{DATASET_PATH}/{CLASS}/test/*/*.png')\n",
+    "\n",
+    "    for im_path in tqdm.tqdm(glob.glob(path), desc=\"Processing images | Modify: {}\".format(modify)):\n",
     "\n",
     "        image = cv.imread(im_path)\n",
-    "        class_type = im_path.split(\"\\\\\")[-2]\n",
+    "        class_type = os.path.basename(os.path.split(im_path)[-2])\n",
     "\n",
     "        if modify:\n",
     "            image = modify_image(image)\n",
@@ -401,7 +405,7 @@
    "source": [
     "recall = recall_score(labels1, predictions1)\n",
     "precision = precision_score(labels1, predictions1)\n",
-    "f1 = f1_score(labels2, predictions2)\n",
+    "f1 = 2 * (precision * recall) / (precision + recall) if (precision + recall) > 0 else 0\n",
     "\n",
     "print(\"\\nWithout modification\\n\")\n",
     "\n",
@@ -414,7 +418,7 @@
     "\n",
     "recall = recall_score(labels2, predictions2)\n",
     "precision = precision_score(labels2, predictions2)\n",
-    "f1 = f1_score(labels2, predictions2)\n",
+    "f1 = 2 * (precision * recall) / (precision + recall) if (precision + recall) > 0 else 0\n",
     "\n",
     "print(\"\\nWith modification\\n\")\n",
     "\n",
@@ -439,9 +443,9 @@
    "source": [
     "# Wyznaczmy metryki jak dla zadania multi-klasowego (macro)\n",
     "\n",
-    "recall = recall_score(labels1, predictions1, average='macro')\n",
+    "recall = recall_score(labels1, predictions1, average='macro', zero_division=0)\n",
     "precision = precision_score(labels1, predictions1, average='macro', zero_division=0)\n",
-    "f1 = f1_score(labels2, predictions2, average='macro', zero_division=0)\n",
+    "f1 = 2 * (precision * recall) / (precision + recall) if (precision + recall) > 0 else 0\n",
     "\n",
     "print(\"\\nWithout modification\\n\")\n",
     "\n",
@@ -452,9 +456,9 @@
     "print(f\"Precision: {precision*100.0:.2f}\")\n",
     "print(f\"F1: {f1*100.0:.2f}\")\n",
     "\n",
-    "recall = recall_score(labels2, predictions2, average='macro')\n",
+    "recall = recall_score(labels2, predictions2, average='macro', zero_division=0)\n",
     "precision = precision_score(labels2, predictions2, average='macro', zero_division=0)\n",
-    "f1 = f1_score(labels2, predictions2, average='macro', zero_division=0)\n",
+    "f1 = 2 * (precision * recall) / (precision + recall) if (precision + recall) > 0 else 0\n",
     "\n",
     "print(\"\\nWith modification\\n\")\n",
     "\n",
@@ -469,7 +473,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "env_main",
    "language": "python",
    "name": "python3"
   },
@@ -483,7 +487,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.7"
+   "version": "3.13.5"
   }
  },
  "nbformat": 4,
