Updated titles for correlation matrices to specify time and frequency domains, added legends to variance and mean plots, and improved progress display during training and validation. Enhanced output readability for model evaluation results.

--- a/Student/P8/Projekt8_TimeSeries.ipynb
+++ b/Student/P8/Projekt8_TimeSeries.ipynb
@@ -224,7 +224,7 @@
     "X_train_corr = np.corrcoef(X_train.T)\n",
     "fig,ax = plt.subplots(figsize=(10,10))\n",
     "sns.heatmap(X_train_corr, ax=ax, cmap='coolwarm', center=0)\n",
-    "ax.set_title(\"Correlation Matrix\")\n",
+    "ax.set_title(\"Correlation Matrix - Time Domain\")\n",
     "ax.set_xlabel(\"Samples [-]\", fontdict={'fontsize': 9})\n",
     "ax.set_ylabel(\"Samples [-]\", fontdict={'fontsize': 9})\n",
     "plt.show()\n",
@@ -234,7 +234,7 @@
     "X_train_corr = np.corrcoef(transform_to_freq_domain(X_train).T)\n",
     "fig,ax = plt.subplots(figsize=(10,10))\n",
     "sns.heatmap(X_train_corr, ax=ax, cmap='coolwarm', center=0)\n",
-    "ax.set_title(\"Correlation Matrix\")\n",
+    "ax.set_title(\"Correlation Matrix - Frequency Domain\")\n",
     "ax.set_xlabel(\"Samples [-]\", fontdict={'fontsize': 9})\n",
     "ax.set_ylabel(\"Samples [-]\", fontdict={'fontsize': 9})\n",
     "plt.show()\n",
@@ -251,22 +251,26 @@
     "# Zmienność (odchylenie) cech wejściowych\n",
     "\n",
     "fig,axes = plt.subplots(figsize=(12,4), ncols=2)\n",
-    "axes[0].plot(np.std(X_train[y_train==0], axis=0), linewidth=1, alpha=0.75)\n",
-    "axes[0].plot(np.std(X_train[y_train==1], axis=0), linewidth=1, alpha=0.75)\n",
+    "axes[0].plot(np.std(X_train[y_train==0], axis=0), linewidth=1, alpha=0.75, label=CLASS_NAMES[0])\n",
+    "axes[0].plot(np.std(X_train[y_train==1], axis=0), linewidth=1, alpha=0.75, label=CLASS_NAMES[1])\n",
     "axes[0].set_title(\"Input Features Variance (Time Domain)\")\n",
-    "axes[1].plot(np.mean(X_train[y_train==0], axis=0), linewidth=1, alpha=0.75)\n",
-    "axes[1].plot(np.mean(X_train[y_train==1], axis=0), linewidth=1, alpha=0.75)\n",
+    "axes[0].legend()\n",
+    "axes[1].plot(np.mean(X_train[y_train==0], axis=0), linewidth=1, alpha=0.75, label=CLASS_NAMES[0])\n",
+    "axes[1].plot(np.mean(X_train[y_train==1], axis=0), linewidth=1, alpha=0.75, label=CLASS_NAMES[1])\n",
     "axes[1].set_title(\"Input Features Mean Value (Time Domain)\")\n",
+    "axes[1].legend()\n",
     "plt.show()\n",
     "\n",
     "X_train_fft = transform_to_freq_domain(X_train)\n",
     "fig,axes = plt.subplots(figsize=(12,4), ncols=2)\n",
-    "axes[0].plot(np.std(X_train_fft[y_train==0], axis=0), linewidth=1, alpha=0.75)\n",
-    "axes[0].plot(np.std(X_train_fft[y_train==1], axis=0), linewidth=1, alpha=0.75)\n",
+    "axes[0].plot(np.std(X_train_fft[y_train==0], axis=0), linewidth=1, alpha=0.75, label=CLASS_NAMES[0])\n",
+    "axes[0].plot(np.std(X_train_fft[y_train==1], axis=0), linewidth=1, alpha=0.75, label=CLASS_NAMES[1])\n",
     "axes[0].set_title(\"Input Features Variance (Frequency Domain)\")\n",
-    "axes[1].plot(np.mean(X_train_fft[y_train==0], axis=0), linewidth=1, alpha=0.75)\n",
-    "axes[1].plot(np.mean(X_train_fft[y_train==1], axis=0), linewidth=1, alpha=0.75)\n",
+    "axes[0].legend()\n",
+    "axes[1].plot(np.mean(X_train_fft[y_train==0], axis=0), linewidth=1, alpha=0.75, label=CLASS_NAMES[0])\n",
+    "axes[1].plot(np.mean(X_train_fft[y_train==1], axis=0), linewidth=1, alpha=0.75, label=CLASS_NAMES[1])\n",
     "axes[1].set_title(\"Input Features Mean Value (Frequency Domain)\")\n",
+    "axes[1].legend()\n",
     "plt.show()\n",
     "\n",
     "del X_train_fft\n"
@@ -358,6 +362,7 @@
     "    preds = pipeline.predict(X_test)\n",
     "\n",
     "    report = classification_report(y_test, preds, target_names=CLASS_NAMES, zero_division=0, digits=3)\n",
+    "    print(f\"Model: {name}\")\n",
     "    print(report)\n",
     "\n",
     "    confusion_matrix_ = confusion_matrix(y_test, preds)\n",
@@ -735,7 +740,9 @@
     "        model.train()\n",
     "        losses = []\n",
     "        \n",
-    "        for i, (inputs, labels) in tqdm(enumerate(dataloader_train, 0),desc=f\"[{epoch + 1}/{epochs}] Training\"):\n",
+    "        \n",
+    "        tqdm_train = tqdm(enumerate(dataloader_train, 0),desc=f\"[{epoch + 1}/{epochs}] Training\", total=len(dataloader_train))\n",
+    "        for i, (inputs, labels) in tqdm_train:\n",
     "            inputs = inputs.to('cuda' if iscuda else 'cpu')\n",
     "            labels = labels.to('cuda' if iscuda else 'cpu')\n",
     "            \n",
@@ -750,14 +757,17 @@
     "\n",
     "            losses.append(loss.item())\n",
     "\n",
+    "            tqdm_train.set_description(f\"[{epoch + 1}/{epochs}] Training | Avg. Loss: {np.mean(losses):.4f}\")\n",
+    "\n",
     "        train_loss.append(np.mean(losses))\n",
     "\n",
     "        # validation loss\n",
     "        model.eval()\n",
     "        losses = []\n",
     "        correct_preds = 0\n",
-    "        \n",
-    "        for i, (inputs, labels) in tqdm(enumerate(dataloader_test),desc=f\"[{epoch + 1}/{epochs}] Validation\"):\n",
+    "\n",
+    "        tqdm_test = tqdm(enumerate(dataloader_test),desc=f\"[{epoch + 1}/{epochs}] Validation\", total=len(dataloader_test))        \n",
+    "        for i, (inputs, labels) in tqdm_test:\n",
     "            inputs = inputs.to('cuda' if iscuda else 'cpu')\n",
     "            labels = labels.to('cuda' if iscuda else 'cpu')\n",
     "\n",
@@ -766,11 +776,10 @@
     "            losses.append(loss.item())\n",
     "            correct_preds += (outputs.argmax(dim=1) == labels).float().mean().item()\n",
     "\n",
+    "            tqdm_test.set_description(f\"\\tValidation | Avg. Loss: {np.mean(losses):.4f}\")\n",
+    "\n",
     "        val_accuracy.append(correct_preds/len(dataloader_test))\n",
     "        val_loss.append(np.mean(losses))\n",
-    "        \n",
-    "        # print loss\n",
-    "        print(f'\\ttrain loss: {train_loss[-1]:.4f} | val loss: {val_loss[-1]:.4f}| val acc.: {val_accuracy[-1]*100.0:.2f}\\n')\n",
     "\n",
     "    torch.save(model.state_dict(), save_name)\n",
     "\n",
@@ -839,6 +848,7 @@
     "preds_cnn, labels_cnn = predict_test(model_cnn, dataloader_test)\n",
     "\n",
     "report_cnn = classification_report(labels_cnn, preds_cnn, target_names=CLASS_NAMES, zero_division=0, digits=3)\n",
+    "print(\"\\nCNN Results:\")\n",
     "print(report_cnn)\n",
     "\n",
     "confusion_matrix_cnn = confusion_matrix(labels_cnn, preds_cnn)\n",
@@ -858,6 +868,7 @@
     "preds_mlp, labels_mlp = predict_test(model_mlp, dataloader_test_fft)\n",
     "\n",
     "report_mlp = classification_report(labels_mlp, preds_mlp, target_names=CLASS_NAMES, zero_division=0, digits=3)\n",
+    "print(\"\\nMLP Results:\")\n",
     "print(report_mlp)\n",
     "\n",
     "confusion_matrix_mlp = confusion_matrix(labels_mlp, preds_mlp)\n",
@@ -972,7 +983,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "env_main",
    "language": "python",
    "name": "python3"
   },
@@ -986,7 +997,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.7"
+   "version": "3.13.5"
   }
  },
  "nbformat": 4,
